# COP3053-P2-Group-65-GatorPath

./: CMakeLists.txt  README.md
include/: catalog_loader.h  course.h  course_graph.h  course_node.h  course_recommender.h  gator_path_app.h  max_heap.h  plan_validator.h
src/: catalog_loader.cpp  course_graph.cpp  course_recommender.cpp  gator_path_app.cpp  main.cpp  plan_validator.cpp
